Clean up bit 35.

--- a/mit/ucode/arith.6
+++ b/mit/ucode/arith.6
@@ -2,47 +2,48 @@
 
 	.DCODE
 270:	R-PF,	AC,	J/ADD
-	I-PFıÇ`√YÒ2ó¡âD
+	I-PF,	AC,	J/ADD
 	RPW,	M,	J/ADD
 	RPW,	B,	J/ADD
 	.UCODE
 
 =00****
-ADD:	AR_ARıPa∞YAD/A+B,AD ¯” «ßıëlI©
+ADD:	AR_AR*AC0,AD/A+B,AD FLAGS,EXIT
 =
 
 
 	.DCODE
 274:	R-PF,	AC,	J/SUB
-	I-PF,	AC,Ò2ó”´B
+	I-PF,	AC,	J/SUB
 	RPW,	M,	J/SUB
 	RPW,	B,	J/SUB
 	.UCODE
 
 =00****
-SUB:	AR_ACˆ!R_AR
+SUB:	AR_AC0,BR/AR
 =	AR_AR-BR,AD FLAGS,EXIT
 .TOC	"MUL, IMUL"
 
 	.DCODE
-220:	R,	ACıÇe/ìMUL
-	I,	AC,	J/˘3jÃì
+220:	R,	AC,	J/IMUL
+	I,	AC,	J/IMULI
 	RW,	M,	J/IMUL
 	RW,	B,	J/IMUL
 	.UCODE
 
-.IFNOT/IMU˘íWO°T
+.IFNOT/IMULI.OPT
 =00*01*
 IMULI:
-.IF/IMULI.˘Ù*=00*000
+.IF/IMULI.OPT
+=00*000
 IMULI:	SKP AR18,GEN AC0,SIGNS DISP,	;OPTIMIZE SPECIAL CASE
 		TIME/3T,SC_#,#/17.
 =010	MQ_AR,AR_AC0,			;HERE FOR IMULI OF + BY +
 		CLR ARX,FE_#,#/-9.,	; 9 STEPS WILL DO
-		CALL,J/M˙≥)’Ö
+		CALL,J/MULSUB
 .ENDIF/IMULI.OPT
-IMUL:	MQ_A˙K “øAC0,			;M'IER T˘Ë&—Y M'CAND TO AR
-		CLR ARX,¯—o£Y#/-18.,
+IMUL:	MQ_AR,AR_AC0,			;M'IER TO MQ, M'CAND TO AR
+		CLR ARX,FE_#,#/-18.,
 		CALL,J/MULSUB		;CALL MULTIPLY SUBROUTINE
 .IF/IMULI.OPT
 =110	AR_SHIFT,SKP AR NE,INH CRY18,	;HERE FROM IMULI
@@ -142,16 +143,16 @@ NODIVD:	SET NO DIVIDE,J/NOP		;HERE IF DIVIDE IMPOSSIBLE
 	ARX_AR,AR_BRX,			;HERE FOR POS QUOTIENT
 		SC_#,#/36.,EXIT
 =
-;HERE ON D˘5§ƒã TO SET UP DIVIDEND
+;HERE ON DIVIDE TO SET UP DIVIDEND
 
 DIV1:	BRX/ARX,ARX_AR,AR_AC0,		;CLR BRX, DIVIDEND IN AR LONG
 		FE_#,#/33.,TIME/3T,	;SETUP ITERATION COUNT
-		SIGNS DI˙tJ_DIVS1	;ENTER SUBR
+		SIGNS DISP,J/DIVS1	;ENTER SUBR
 
 ;HERE ON IDIV TO SET UP DIVIDEND.  SKIP IF DIVISOR NEG
 ; ALSO CALLED BY ADJBP
 =1****0
-DIV2:	BRX/ARX,ARX_SHIFT,AR_SIG˘ÀªáLR BRX, DIVIDEND TO AR LONG
+DIV2:	BRX/ARX,ARX_SHIFT,AR_SIGN,	;CLR BRX, DIVIDEND TO AR LONG
 		FE_#,#/33.,		;SETUP LOOP COUNT
 		SKP AR0,J/DIVS1		;ENTER SUBR ACCORDING TO SIGNS
 	BRX/ARX,ARX_SHIFT,AR_SIGN,	;CLR BRX, DIVIDEND TO AR LONG
@@ -174,13 +175,13 @@ DIVIDE	"FE_FE-1,DISP/DIV,MQ/MQ*2"
 =1**100
 DIVS1:	DIVIDE,AR_2(AR-BR),
 		ARX/ADX*2,J/DIVS3	;BOTH D'END AND D'SOR POS
-	AR_-AR LONG,J/DIVS1		;MAKE PO˙h"I≠IDEND, THEN CHK
+	AR_-AR LONG,J/DIVS1		;MAKE POS DIVIDEND, THEN CHK
 DIVS2:	DIVIDE,AR_2(AR+BR),
-		ARX/ADX*2,J/DIVS4	;D'END POS, D'S˘ÙêNãG
+		ARX/ADX*2,J/DIVS4	;D'END POS, D'SOR NEG
 	AR_-AR LONG,J/DIVS2
 
 =1*010
-DIVS3˜BbI≠˘1"¨É˙WŸ(ÉR+BR),ARX/ADX*2,
+DIVS3:	DIVIDE,AR_2(AR+BR),ARX/ADX*2,
 		ARL/AD*2,CALL.M,J/DIVLP	;START DIVIDING
 	I FETCH,RETURN3			;RETURN TO CALLER WITH NO DIVIDE
 
@@ -204,19 +205,20 @@ DIVS4:	DIVIDE,AR_2(AR-BR),ARX/ADX*2,
 ;[TIME=12+3(FE)+3(RESTORE REQ'D)] ... IF FE=33, 111-114.
 
 =1*000
-¯íkL°˜BbI≠IDE,AR_2(AR+BR),ARX/ADX*2ıíóƒìVLP
-	DIVIDE,AR˚ÏîA•ı∞©)YARX/A¯ñ2Y˘K‚I≠LP
+DIVLP:	DIVIDE,AR_2(AR+BR),ARX/ADX*2,J/DIVLP
+	DIVIDE,AR_2(AR-BR),ARX/ADX*2,J/DIVLP
 DIV-:	DIVIDE,AR_2(AR-BR),ARX/ADX*2,J/DIVLP
 DIV+:	DIVIDE,AR_2(AR+BR),ARX/ADX*2,J/DIVLP
 	DIVIDE,AR_AR+BR,ARX/ADX,J/DIVX
-Ò1$÷ì¯ëVA•_AR-BR,ARX/ADX,J/DIVX
+	DIVIDE,AR_AR-BR,ARX/ADX,J/DIVX
 	DIVIDE,AR_AR-BR,ARX/ADX,J/DIVX		;NO SHIFT ON FINAL STEP
 	DIVIDE,AR_AR+BR,ARX/ADX,J/DIVX
 
 ;HERE AFTER FINAL DIVIDE STEP
 ; MQ HAS POSITIVE FORM QUOTIENT
-; AR!¯4¨ ëAS REMAINDER, EXCEPT THATÙj õUST BE RESTORED IF I˙à$”; NEGATIVE (IT'S NEGATIVE IF THERE WAS NO CARRY ON FINAL STEP)
-; THEÙÈIèINAL DIVIDEND IS STILL INÙa∞Y SO WE CHECK ITS SIGN
+; AR!ARX HAS REMAINDER, EXCEPT THAT IT MUST BE RESTORED IF IT IS
+; NEGATIVE (IT'S NEGATIVE IF THERE WAS NO CARRY ON FINAL STEP)
+; THE ORIGINAL DIVIDEND IS STILL IN AC0, SO WE CHECK ITS SIGN
 ; TO DETERMINE WHETHER TO NEGATE THE (RESTORED) REMAINDER.
 
 =1**100
@@ -242,7 +244,8 @@ DDVSUB:	AR_2(AR-BR),ARX/ADX*2,DIVIDE,J/DDVLP
 	AR_MQ,MQ_AR,FE_#,#/32.,RETURN5
 	AR_MQ,MQ_AR,FE_#,#/32.,RETURN5
 	AR_MQ,MQ_AR,FE_#,#/32.,RETURN3
-.TOC	"DOUBLE IN˙ëc≈• ARITHMETIC -- DADD, DSUBıà"M´˘ãDâ˘5ë
+.TOC	"DOUBLE INTEGER ARITHMETIC -- DADD, DSUB, DMUL, DDIV"
+
 	.DCODE
 .IFNOT/DBL.INT
 114:	I,	J/UUO
@@ -274,12 +277,12 @@ DASMD:	BR/AR,AR_AC1*2,ARL/AD*2,	;HIGH MEM WORD TO BR
 
 =00*	AR_AR+BR LONG,AD FLAGS,EXIT DBL	;DADD
 
-	AR_AR-BR LONG,¯1FôAGS,E˚j âBL	;DSUB
+	AR_AR-BR LONG,AD FLAGS,EXIT DBL	;DSUB
 
 	MQ_SHIFT,AR_0S,ARX_0S,		;DMUL, USE AC1 AS INITIAL M'IER
 		FE_#,#/-18.,J/DMULT	;SETUP STEP COUNT
 =
-;HEREÙß“ADOUBLE WORD MULTIPLY
+;HERE FOR DOUBLE WORD MULTIPLY
 
 =1*00*
 DMULT:	AD/0S,MUL,CALL.M,J/MULP		;BEGIN MULTIPLY
@@ -302,20 +305,20 @@ DMUL1:	AC0_AR,AR_SIGN,
 
 DMUL2:	BR/AR,AR_SHIFT			;GET 2ND WITH SIGN, SAVE SIGN
 	AC1_AR,AR_ARX,ARX/MQ		;READY TO BUILD 3RD WORD
-	ARX_SHIFT,AR_BR,MQ_MQ*2		;SIGNIFICANT B˘5)†©O ARX, SIGN TO AR
+	ARX_SHIFT,AR_BR,MQ_MQ*2		;SIGNIFICANT BITS TO ARX, SIGN TO AR
 	AR_SHIFT,ARX_AC3,		;3RD WORD IN AR, GET LOW
 		MQ_MQ*.25		;EXTRA PROD BIT TO MQ 35
 	AC2_AR,AR_MQ			;,I FETCH WHEN TIMING FIXED
 =0*	ARX_SHIFT,AR_BR,I FETCH,	;LOW WORD AND SIGN READY
 		CALL,J/SHIFT		; GET LOW WORD TO AR
 STRAC3:	AC3_AR,FINISH			;GANZ GETAN
-˜r"“ã FOR DOUBL¯®$Œ©EGER DIVISION
-˜pi ë¯4–(ã), ARX HAS (AC3ı+AùD MQ IS CLEAR
+;HERE FOR DOUBLE INTEGER DIVISION
+;AR HAS (E), ARX HAS (AC3), AND MQ IS CLEAR
 
 DDIV0:	T0_AR,AR_ARX,ARX_ARX*8,SC_1	;SAVE (E) IN T0
 	BRX/ARX,ARX_SHIFT,		;AC3 3-35 TO BRX, 1-2 TO ARX
-		AR_AC2,SC_#,#/2		;¯Òj ÉC2 READY
-	AR_SHIFT,BR/ARıÇDâwAC2 BITS 2-35 WITH AC3 1-2
+		AR_AC2,SC_#,#/2		;GET AC2 READY
+	AR_SHIFT,BR/AR,			;AC2 BITS 2-35 WITH AC3 1-2
 		ARX_AC1,VMA_VMA+1	;READY TO GET (E+1)
 	BR/AR,AR_ARX,ARX_BR*2,		;LOW DOUBLE WORD NOW IN BR LONG
 		SC_1,FE_1
