--- a/mit/ucode/eis.6
+++ b/mit/ucode/eis.6
@@ -1,34 +1,43 @@
 .IF/EIS
-îñKªO‡	"EXTø³¢E‰ INSTúUaÔ“ùóS‹úˆ"E‡ODING"
+
+.TOC	"EXTENDED INSTRUCTION SET DECODING"
 
 ;GET HERE WITH E0 IN BR, (E0) IN AR
-;	(ø¬ “S THEôèE¥ATION WORD, AND HAS THE NORMAL -10 ù3©Ô¥UCTION
-;	FORMAúˆ­ABITS 0-8 ARE OPCODE, 9-12 IGNOúQb,A13 @, 14-17 XR,ñ¢‰ƒND 18-35 Y.  THE AC USED øsæÅ§ FROM THE ø¶*ED INSú”ªÃ©ION.îñNÐCŸù´*Ô‹ôX úSæ cökYµ
-;Eû"Î‰:FE_#õpi0[÷¯[20,SKP SCAD0,	;ør"Ã— LEGAL OPERATION
-;		ARX_AR,AR_BRX		;OPRô' ƒRX, GøµA‡ FROMô©XñOXEXT1:	AR_BR,J/UUO			;OPCODE > 17
-	AR0-8_FE+#,#/20			;PLUG OPR INú“ÐE±ú‘gDAAC
-	øñg ƒR,LOAøˆ$ÒYAR_ARX,ARL_0.M,
+;	(E0) IS THE OPERATION WORD, AND HAS THE NORMAL -10 INSTRUCTION
+;	FORMAT -- BITS 0-8 ARE OPCODE, 9-12 IGNORED, 13 @, 14-17 XR,
+;	AND 18-35 Y.  THE AC USED COMES FROM THE EXTEND INSTRUCTION.
+; COMPUTE E1 FROM 13-35
+
+;EXTEND:FE_#+AR0-8,#/-20,SKP SCAD0,	;CHECK LEGAL OPERATION
+;		ARX_AR,AR_BRX		;OPR TO ARX, GET AC FROM BRX
+=0
+EXT1:	AR_BR,J/UUO			;OPCODE > 17
+	AR0-8_FE+#,#/20			;PLUG OPR INTO EXTEND AC
+	GEN AR,LOAD IR,AR_ARX,ARL_0.M,
 		EA MOD DISP
 =00
-EXTöN„Åc_AR,AR_BR,ùKâØ©5		;SAVE E1, REø1, ©O SAVE E0
-	ARLûìMYAR_ARX+XR,J/EXTöCE	EN ARû  “NDRCT,SKP INTRPT,J/EXT3
+EXT2:	E1_AR,AR_BR,J/EXT5		;SAVE E1, READY TO SAVE E0
+	ARL_0.M,AR_ARX+XR,J/EXT2
+	GEN ARX,A INDRCT,SKP INTRPT,J/EXT3
 	GEN ARX+XR,A INDRCT,
 		SKP INTRPT,J/EXT3
 =0
-EXT3:	AR_MEM,ARX_ù±f¬•õñlTiñ¢„Á¥_MEM,TAKE INTRPúƒEE±T4:	ARL_0.M,EA MOD Dù4è,•/EXT2
+EXT3:	AR_MEM,ARX_MEM,J/EXT4
+	AR_MEM,TAKE INTRPT
+EXT4:	ARL_0.M,EA MOD DISP,J/EXT2
 
-EXT5:	ø¬/Á¥,VMA_AR+1,IR DIútJ_2000	;ENTER EXTENDED INSTúH$ADLER
+EXT5:	E0_AR,VMA_AR+1,IR DISP,J/2000	;ENTER EXTENDED INSTR HANDLER
 
-;THE EXú‘gD‹D INSTRUCTù3ç §øµI§ "HIDø‘g"AUNDER THE LUUO'S BY THIS
-; USE OF ôRi ‰ù4è,•/2000" TO ø’iÐƒTCH Tùè*H‹M.  TùPL«UO'S úò$Ã‘
-; Hø5¢ ©HE SAME OPCODESôi ‹XTENDED OPERATIONS AúQPA§úrcÎ‹D UNIQUE
-; CRAù¨&O‡ATIONS IN ú’" ¥ø3£ÅAö,0Aú“Ð1a17.  WHEN WE SPECIFY J/2000,
-; THEôéA› ADDRESS Bø°çÍ‹úh°aö*OAöl·Y WHICH ACCESSES CRAM LOCATIONS
-; 2ö ©ùè0cöè!E‡AUSE ADDRESS BITS 01 AND 02 ARE IGNùô¢ÄAWHEN BIT 00
-; ù4ÐT¥UE (CRA, CRM).
+;THE EXTENDED INSTRUCTION SET IS "HIDDEN" UNDER THE LUUO'S BY THIS
+; USE OF "IR DISP,J/2000" TO DISPATCH TO THEM.  THE LUUO'S WHICH
+; HAVE THE SAME OPCODES AS EXTENDED OPERATIONS ARE ASSIGNED UNIQUE
+; CRAM LOCATIONS IN THE RANGE 1000 TO 1017.  WHEN WE SPECIFY J/2000,
+; THE CRAM ADDRESS BECOMES 3000 TO 3017, WHICH ACCESSES CRAM LOCATIONS
+; 2000 TO 2017 BECAUSE ADDRESS BITS 01 AND 02 ARE IGNORED WHEN BIT 00
+; IS TRUE (CRA, CRM).
 
-2005:	AR_AC3,J/CMúÄ‰;HIDDø³B‹HIND ù‹aÍ§
-200öÎ„Ã™R AR,ARX_1S,SC_ôk¯c5.,J/EDIT	;HIDDø³B‹ùgDAL-EDIT
+2005:	AR_AC3,J/CMPS			;HIDDEN BEHIND L-CMS
+2006:	CLR AR,ARX_1S,SC_#,#/15.,J/EDIT	;HIDDEN BEHIND L-EDIT
 .IF/DECIMAL
 2010:	AR_AC0 COMP,J/DBIN		;HIDDEN BEHIND L-DBIN
 2011:	AR_AC1,ARL/AD,SC_1,ARX+MQ_0.M,
@@ -638,5 +647,4 @@ EDFLT:	MEM_AR,AR_2			;GET FLOAT FROM E0+2
 =111	AR_SFLGS,SC_#,#/40		;SET S FLAG AND RETURN
 SETFLG:	P_P OR SC,RETURN3		;NO FLOAT CHR, SET S FLAG
 
-.ENDIF/EIS
-
+.ENDIF/EISî
