--- a/mit/ucode/fp.5
+++ b/mit/ucode/fp.5
@@ -1,5 +1,8 @@
-.TOC	"SINGLE FLOATING ADD & SUB -- FAD, FADR, FSB, FSBRôCE	.DCODE
-.ù1§O©/UFA.ø‘§130:	I,	J/UUO		;UFA
+.TOC	"SINGLE FLOATING ADD & SUB -- FAD, FADR, FSB, FSBR"
+
+	.DCODE
+.IFNOT/UFA.DFN
+130:	I,	J/UUO		;UFA
 	I,	J/UUO		;DFN
 .ENDIF/UFA.DFN
 
@@ -11,15 +14,15 @@
 	R,	FL-AC,		J/FADR
 	I,	FL-AC,	B0/0,	J/FADRI
 	RW,	FL-MEM,		J/FADR
-	RW,	øÓÂŸTH,	J/FADR
+	RW,	FL-BOTH,	J/FADR
 
 150:	R,	FL-AC,	B0/1,	J/FSB
 	R,		B0/1,	J/FSBL
 	RW,	FL-MEM,	B0/1,	J/FSB
 	RW,	FL-BOTH,B0/1,	J/FSB
 
-	R,	Fù‹`ÃY		J/FSBR
-	I,	Fù‹`ÃY	B0/1,	J/FSBRI
+	R,	FL-AC,		J/FSBR
+	I,	FL-AC,	B0/1,	J/FSBRI
 	RW,	FL-MEM,		J/FSBR
 	RW,	FL-BOTH,	J/FSBR
 	.UCODE
@@ -102,11 +105,12 @@ FMPR:	SC_EXP,EXP_SIGN,ARX_0S		;PREPARE M'IER FRACTION
 		CALL.S,J/MULSUB		;AND BEGIN MULTIPLY
 =11*	FE_#+SC,#/-200,NORM AR,J/SNORM
 =
-.TOC	"úrgG™E FLOø5$Î DIVIDE --ô¢VY FDVR"
+.TOC	"SINGLE FLOATING DIVIDE -- FDV, FDVR"
 
 	.DCODE
-170:	Rõ‚cL[ø0Ö	•/FDV
-	R,	FL-AC,	J/Fø•¦	RW,	FL-MEM,	J/FDV
+170:	R,	FL-AC,	J/FDV
+	R,	FL-AC,	J/FDVL
+	RW,	FL-MEM,	J/FDV
 	RW,	FL-BOTH,J/FDV
 
 	R,	FL-AC,	J/FDVR
@@ -116,80 +120,154 @@ FMPR:	SC_EXP,EXP_SIGN,ARX_0S		;PREPARE M'IER FRACTION
 	.UCODE
 .IF/FPLONG
 =00***0
-FDVL:	Fø·âØ¡-1,EXP_SIGN,ARX+MQ_0.S,J/øÑ+Lcñ¢£D­:	SR_#,#/1,J/FDVR			;FLAG TRUNøpjEAMODE
+FDVL:	FE_EXP-1,EXP_SIGN,ARX+MQ_0.S,J/FDVL1
+FDV:	SR_#,#/1,J/FDVR			;FLAG TRUNCATE MODE
 =
-.ø³¢I/FPLOùÑÆŠ{00***öEF‰VRI:	ø4¯Á¥ SWAP
-FDVúN„Ó‡ûñlPW1,EXP_SIGN,ARX+MQ_0.S	;SETUP DIVISOR
-=îñOX0a	BR/AúK!R±/ARX,ñ"D»‰IVISOúH*OABR, Cù”B¥X
-		ø4¯Á‡0,FE_ôk¯e7.,	;øñj ‰IVIDEùÑ §TEP CùõgT		SKú Äa,CALLõ’—Æ‰VCHKîñCE=c0	SKPô©0YCALL,ùKâI­-		;OùkB‹GIN Dù5¤Ó“ON
-	úqj L NO ø’k,•/IFNOúD»O DIVù1"¬ASORRYñ¢†ŠwRETURùÈ$E¥E WITù(ÕŸTIENTôg ƒRX.  úñPTŸOK 29ô$Ö“DE STø´)¬ATO
-;ôêÁ¥ANTEEô Ö“NG A úSêÎ‰ING Bù5E­EN IFô$EAFIRSTôêE¡ GENEúPjE§
-; AôjÏ©IENT øRj ŸF ZERùë ©HEREFùô¢¬ATHE MúpO QUOTù1gTAIS EIú’"Ò; INô¤ÔA7 OR ÷AD NORù¨+É™L FINøˆ$ÔAIN ONø¨)Ô‹P.
-îñOX±a	AR_AúVF‹_FE+#õˆ×²Y		;NEøðjI­E QUOú’bÎ©
-		SùtB¥ EQ,Jõñ¢VEG	;CùaËAFOR Mùô¢ £UO TOôçÍ‹
-	ARûðiXU.25,AúV/Á¥X*.25õ“§Ò›,	;JUùÒÐI§ 36 Bù5) ƒWAY FúSæ ›SB
-	ñ1¢ßE+#,#õì–J_SNORMñ.èO§ QUOTù1gTY NORMø3$Ú‹
+.ENDIF/FPLONG
+=00***0
+FDVRI:	AR_AR SWAP
+FDVR:	SC_EXP+1,EXP_SIGN,ARX+MQ_0.S	;SETUP DIVISOR
 =
-;HERE IF QUOTIENT SHOULD BE NEGATIVE, WITH POSITIVE FORM INîñNÐA¥ AND ø4¬.A SKIPôc ¥EMAINø‘i QIN BRõ($ÓAZERO.ô$ÎATHIS øpiÅY
-; Wø¨!Ì‹AR ARûB‹CAUSEôi ‡ONTAIùÔÐT‘E ENTù4¢ £UOTIEùÕ; IF, HOWEVER, THE REMAINDER IS NOT ZERO, WE INFER
-; Tùj ƒN INFù3¤Ô‹ PRECù4äÏ DIVIúrgÎAWOULDôâÎ‹RATE ù³éEAONESîñNÐI THE ú5gÔ“ENT. ôc ©HAT Iúh*H‹ CASEõˆ+ÅALEAVEôiXAWITH ú’"; QUOTIENT, SO THE NEGATION PROCESS WILL WORK CORRECTLY TO RETURNñ¢ ©HE HIøòO¥DER Pø4ª ŸF THEôgF“NITE-ú¢Ã“SION ùÑcÁ©IVE Qú³êI‹NT.
-÷¬ŠDVNEG÷BiÅ© SR1,ø4¯Á¥*.25 ù“çGYNORM,ùKéÎŸRM
-	ø4¬_aS,J/Fø•§E			;Rø³`ÉDER Wø³ª ©O ZERùãEwHERE øÓé DVL
-ñ¢—I/FPLOùÑÆŠ;FDVùŽ„Æ‹_EXP-ö+"Ø¡_SIGNõæRAARX+Mú#E=a00
-Fø•¦1u	AR_AølVB¥_AR Lùó£¬	;SAVø¨"I­ISOR ù3B¥ LONGñ¢„‰§C_#,#õîW,‡ALL		÷t¢Á‰Y TO úr$Æ© LOW ø’kI‰END
+=000	BR/AR,BRX/ARX,			;DIVISOR TO BR, CLR BRX
+		AR_AC0,FE_#,#/27.,	;GET DIVIDEND, STEP COUNT
+		SKP AD0,CALL,J/FDVCHK
+
+=10	SKP BR0,CALL,J/DIV-		;OK, BEGIN DIVISION
+	SET FL NO DIV,J/IFNOP		;NO DIVIDE, SORRY
+
+;RETURN HERE WITH QUOTIENT IN ARX.  WE TOOK 29 DIVIDE STEPS, TO
+; GUARANTEE HAVING A ROUNDING BIT EVEN IF THE FIRST STEP GENERATES
+; A QUOTIENT BIT OF ZERO.  THEREFORE, THE MSB OF QUOTIENT IS EITHER
+; IN BIT 7 OR 8, AND NORM WILL FIND IT IN ONE STEP.
+
+=110	AR_ARX,FE_FE+#,#/2,		;NEGATIVE QUOTIENT
+		SKP BR EQ,J/FDVNEG	;CHECK FOR MORE QUO TO COME
+	AR_ARX*.25,ARX_ARX*.25,NORM,	;JUNK IS 36 BITS AWAY FROM MSB
+		FE_FE+#,#/2,J/SNORM	;POS QUOTIENT, NORMALIZE
+=
+;HERE IF QUOTIENT SHOULD BE NEGATIVE, WITH POSITIVE FORM IN
+; AR AND ARX.  SKIP IF REMAINDER (IN BR) IS ZERO.  IN THIS CASE,
+; WE CLEAR ARX, BECAUSE AR CONTAINS THE ENTIRE QUOTIENT.
+; IF, HOWEVER, THE REMAINDER IS NOT ZERO, WE INFER
+; THAT AN INFINITE PRECISION DIVISION WOULD GENERATE MORE ONES
+; IN THE QUOTIENT.  IF THAT IS THE CASE, WE LEAVE ARX WITH THE
+; QUOTIENT, SO THE NEGATION PROCESS WILL WORK CORRECTLY TO RETURN
+; THE HIGH ORDER PART OF THE INFINITE-PRECISION NEGATIVE QUOTIENT.
+=0
+FDVNEG:	SET SR1,AR_AR*.25 LONG,NORM,J/SNORM
+	ARX_0S,J/FDVNEG			;REMAINDER WENT TO ZERO
+;HERE FOR FDVL
+
+.IF/FPLONG
+
+;FDVL:	FE_EXP-1,EXP_SIGN,CLR ARX+MQ
+=000
+FDVL1:	AR_AC1,BR_AR LONG,		;SAVE DIVISOR IN BR LONG
+		SC_#,#/9.,CALL		;READY TO SHIFT LOW DIVIDEND
 	ARX_SHIFT,AR_AC0,		;DIVIDEND IN PLACE
 		SC_FE,FE_#,#/24.,	;EXP TO SC, STEP COUNT TO FE
-		SKP AD0,J/FDVCHK	;GO CHECK FOR NO DIVIø‘FŠ{010	Cø3&,§KP BRö%/DVL2	ñ.ãÏABEGINô$Ö“DE
-	úqj L NO ø’k,•/IFNOúD»‡AN'T ø’kI‰E, ABùôª
-=11ö`Ò¿AC0,SúWÑ¬G/5,		÷s¢ÇAQUO, øÓ ÇATRUNCø5" ›ODE
+		SKP AD0,J/FDVCHK	;GO CHECK FOR NO DIVIDE
+=010	CALL,SKP BR0,J/FDVL2		;GO BEGIN DIVIDE
+	SET FL NO DIV,J/IFNOP		;CAN'T DIVIDE, ABORT
+
+=110	AR_AC0,SR_#,#/5,		;NEG QUO, FLAG TRUNCATE MODE
 		SR DISP,J/FDVL4		; WAS IT 26 OR 27 STEPS?
-	AR_AC0,SR_#,#/1,		;POS Qú³ÆŠ	SR Dù4è,•/FDVLöƒE=
-
-;COME HERE TO START THE DIVISION.  ON THE FIRST STEP, WE CHEørÆŠw TO Sø±PW‘ETHERôP1AHAS Bø±g ENERAú‘b “N THEôjÏ©IENT.ô$ÆASO,
-; 26 ADDITIONAL STEPS WILL GENERATE THE FULL 27 SIGNIFICANT BITS
-; OFô$EAQUOTIø³ª.A IF Nùõ e7 STEúÐA¥E REQú²iE‰.
-
-÷¬ŠDVL2:ñ1$Ö“DE,ARûì”A¥-BR),ø4¬/ƒDX*2,ùKãD­L3	;Fù4©ÔADIVIDø¨)Ô‹P
-	Dù5¤Ä‹,AR_2(AR+BúJVA¥X/ADX*2		; DOESôj ø³¢Òƒú‘PAA1?
-=öŠø•¦3u	DISP/DIV,MQ/MQ*2,		÷s§¬AúeÅAAN EXú”  ‰IVIDE STEPñ¢„‰ƒR_2(AR+BR),ARX/ø1,*e,J/DIVLP	; WITHùõj ‡OUNTING FE
-	SRûìVS‡_#+SCõˆ×±YJ/DIV-		;Yø´Ö e7 STEPS WIù“NŸRMALIûQPQ«ùãE	‰ù4è/‰IV,MQõóhªeõi_eõi-…R),ARX/ADX*2,J/ø’kL¡
-	SRûìVS‡_#+SCõˆ×±YùKâI­õcEwWE COù±PH‹RE AFTER DùògGATHE DIVISION, EITHERô› ŸúH7ASTEPSñ¢ ƒúh)E£ú²iE‰ TO GENERAú‘PAAùÓéMƒù’mE‰ QUOTù1gTAFROM ùÓéMƒù’mE‰
-; OPERANDS.  ùÓë ù1êÒ‹ôêÔAWHAT EXPONø³ª ©ùPR‹MAINDER SHOULD HAVE.ñ¢†Š{öEF‰VL4:	SC_EXP-#,#õì›®Yñ"D»‰IVIDEND EXP-27îñBDÁ¥_BR,SùtA¥ö%/DVL6	÷qâÔAREMAIùÑ"ÒYô"Ó© D'ENøˆ)ÉN
-	SøwâØ¡-#,#/öM—,		;D'END Eû²mñ¢„‰ƒúWáRYSKP AR0
-îñNäE¥E WITH REMAINDEúH$ÎAAR, Iú”ÐE±P IN úpÆŠwôåÉ¡ôc ‰'END (AND THEREøÓéEAREM) NEGATIVE.îñCE=a
-FDVL6:	Eû/Ó‡õ¬Ô‹ DISP,		;TEST FOR UNDERFLùõÆŠ	SKP AR EQõ’—Æ‰VL7	;ôé ¥EM =0
-	AR_-BR,SKP CRY0,	ñ.çEATE REM, CHECK =0
-		GEN úpÖB³ú‘PD“SP	; AND Lùóå OR EXú*Æ™ùãE=c10	EXP_-SC-1,J/øÑ+Lo		;ONE'S COMPLEù±gTAø¶(	AR_0S				;REM =0 OR EXP UFLOîñOX±a
-FDVL7:	AøloÁ¥õiXWMQ_0.ù«‰wúpkEAúQfÁ“ùÑ"Ò		AR_MQ,AúSÁ‰õ’—ÓR2	;Gùè'O¥MALIZE QUOTIENT
-	ARûì)¬•/FDVL7
-.ENDIF/FPLONøãE
-;SUBR TOôäE‡ùh#O¥ô¦OƒTING NO DIVIDE
-; ENTER WITH SKP ON DIVIø‘gDASIGN, IN AR LONG, WITH
-;ô$Ö“SOR EXP IN SC, ø’kI§OR IN BR
-
-=0îñQ¢V‡HK:	SC_EXP-SC,Eû/Ó“øó–S—P BR0õ’—Æ‰VCK1
-	AR_-AR LONG,J/FDVCHK		;øñj ¡OSITIúÑPD“úÒbEøƒE=añ¢£D­ørØºGEN AR-2BR,SKP øt¬°Y		;TEúuFŸúH'OADIVIDø£E	úpï£WSC,#/ö-Û¬¥ETURN2	;AND CORRECT EXP
-	GEN AR+2BR,SKP CRY0,		;SAME TEST, NEG DIVISOR
-		úpï£WSC,#/ö-Û¬¥øµ*Ò2	;ANøˆ)Á›E EXPôçÒ¥ø°êIŸùÃE]TOC	"ú± ¬Aø‘§,AFSC, IBP"
-;ENTø´W“TH (Eõ($ÎAø4†Š]IF/UFø+¢Fñ¢„®‰øsâE130:	R,		J/UFAñ¢„Ò¡W,		J/DFN
-	.UCODE
-=00**õLŠ‰øÓ	ø·àÒa-8,AR0-8_#õˆ×°Yñ"]ÓƒúÑPLŸúè"Ø¡õˆ!Ì¥ SO Cø3		ARX_0S,J/DFN1		; DETECT FRACú’gÎA÷¨UFA:	FE_EXP,SC/SCAD,EXP_SIGN,AúV/°§
+	AR_AC0,SR_#,#/1,		;POS QUO
+		SR DISP,J/FDVL4
 =
-=000	BR_AR LONG,AR_AC0,CALL,J/ø¶(D=100ñ0iX¿ø4–A¥_SIGNõiL_AD,		;READû(*OAUNNORMALIZø¨)Íƒù“"ÒAOP
-	ñ0àÌ™õÓVJ_úr$Æ©ñ¢„Á¥_SIGNõiX_AD			;LOSTôæÁ™LER OúU§E ITSôäÇñ¢„Á¥_AR+BúK)Ë¡ôb ø«‰wIS REúufTAúrcÎ“øÒaÁT?
-		SC_Fø«$ øµ!È=
-=ö`Ãc_AR,J/FINIñ"D»ùëC™ø°i ¥ESULT AC
-	SKP EXP NE,BR/AR		;IS RIGHT SHIFT REQ'D?
-=0ñ4åÐAø4˜,ETCH WAIT,ùKêÆƒ4	;NOõˆ$ÓARESULT NEG÷ãE	ƒúWáRU.5,GEN FE-ôk¯göíÖS—P SCAøˆ'EYFETCH WAIT
-=0	øÑo­c,SET FLOV
-	FE_øÑU±YSC/SCAD,SKP AR0
+
+
+;COME HERE TO START THE DIVISION.  ON THE FIRST STEP, WE CHECK
+; TO SEE WHETHER A 1 HAS BEEN GENERATED IN THE QUOTIENT.  IF SO,
+; 26 ADDITIONAL STEPS WILL GENERATE THE FULL 27 SIGNIFICANT BITS
+; OF THE QUOTIENT.  IF NOT, 27 STEPS ARE REQUIRED.
+
 =0
-UFA4÷B`Òa-8_SCõ’—Ó©ø0Ø‰÷t'ÓY PUT IN EXP STRø2cÈ©ñ¢„Á¥ö\_[SC-1,J/STAC1		;NEG, ú´â ‡ùóhL‹MENT OF EXúE
-DFNö.„Á¥ûë`ÒYSKP CRY0			; LOW FRACTION =0?
-=0	AúL¸¿FE,STùô¢¬ñ"]Ó©ORE LOW WORD BAørÐTŸ MEM
-		ARX_AC0 COMP,J/STMAC	;ôâÔAøsæÐ™EMENTø±H“GH WORD
-	AR0-8_FE,STORE,			;LOW WORD WAS ZERO, INSTALLôlP		ARX_-AC0,J/STMAC	÷h#Å© NEGATED HIGH WORD
-.ENDIF/UFA.DFNîñCŠ.DCODE
+FDVL2:	DIVIDE,AR_2(AR-BR),ARX/ADX*2,J/FDVL3	;FIRST DIVIDE STEP
+	DIVIDE,AR_2(AR+BR),ARX/ADX*2		; DOES IT GENERATE A 1?
+=00
+FDVL3:	DISP/DIV,MQ/MQ*2,		;NO, TAKE AN EXTRA DIVIDE STEP
+		AR_2(AR+BR),ARX/ADX*2,J/DIVLP	; WITHOUT COUNTING FE
+	SR_1,SC_#+SC,#/1,J/DIV-		;YES, 27 STEPS WILL NORMALIZE QUO
+	DISP/DIV,MQ/MQ*2,AR_2(AR-BR),ARX/ADX*2,J/DIVLP
+	SR_1,SC_#+SC,#/1,J/DIV+
+;WE COME HERE AFTER DOING THE DIVISION, EITHER 26 OR 27 STEPS
+; AS REQUIRED TO GENERATE A NORMALIZED QUOTIENT FROM NORMALIZED
+; OPERANDS.  NOW FIGURE OUT WHAT EXPONENT THE REMAINDER SHOULD HAVE.
+
+=0
+FDVL4:	SC_EXP-#,#/27.,			;DIVIDEND EXP-27
+		AR_BR,SKP AR0,J/FDVL6	;GET REMAINDER, TEST D'END SIGN
+	SC_EXP-#,#/26.,			;D'END EXP-26
+		AR_BR,SKP AR0
+
+;HERE WITH REMAINDER IN AR, ITS EXP IN SC
+; SKIP IF D'END (AND THEREFORE REM) NEGATIVE.
+
+=0
+FDVL6:	EXP_SC,BYTE DISP,		;TEST FOR UNDERFLOW
+		SKP AR EQ,J/FDVL7	; OR REM =0
+	AR_-BR,SKP CRY0,		;NEGATE REM, CHECK =0
+		GEN SC,BYTE DISP	; AND LOOK FOR EXP UFLO
+=110	EXP_-SC-1,J/FDVL7		;ONE'S COMPLEMENT EXP
+	AR_0S				;REM =0 OR EXP UFLO
+=110
+FDVL7:	AC1_AR,ARX+MQ_0.M,		;SAVE REMAINDER
+		AR_MQ,ARL/AD,J/SNR2	;GO NORMALIZE QUOTIENT
+	AR_0S,J/FDVL7
+.ENDIF/FPLONG
+
+
+;SUBR TO CHECK FOR FLOATING NO DIVIDE
+; ENTER WITH SKP ON DIVIDEND SIGN, IN AR LONG, WITH
+; DIVISOR EXP IN SC, DIVISOR IN BR
+
+=0
+FDVCHK:	SC_EXP-SC,EXP_SIGN,SKP BR0,J/FDVCK1
+	AR_-AR LONG,J/FDVCHK		;GET POSITIVE DIVIDEND
+=0
+FDVCK1:	GEN AR-2BR,SKP CRY0,		;TEST FOR NO DIVIDE
+		SC_#+SC,#/177,RETURN2	;AND CORRECT EXP
+	GEN AR+2BR,SKP CRY0,		;SAME TEST, NEG DIVISOR
+		SC_#+SC,#/177,RETURN2	;AND SAME EXP CORRECTION
+.TOC	"UFA, DFN, FSC, IBP"
+;ENTER WITH (E) IN AR
+.IF/UFA.DFN
+	.DCODE
+130:	R,		J/UFA
+	RPW,		J/DFN
+	.UCODE
+=00***0
+DFN:	FE_AR0-8,AR0-8_#,#/0,		;SAVE LOW EXP, CLR SO CAN 
+		ARX_0S,J/DFN1		; DETECT FRACTION = 0
+UFA:	FE_EXP,SC/SCAD,EXP_SIGN,ARX_0S
+=
+=000	BR_AR LONG,AR_AC0,CALL,J/EXPD
+=100	ARX_AR,AR_SIGN,ARL/AD,		;READY TO UNNORMALIZE SMALLER OP
+		CALL.M,J/SHIFT
+	AR_SIGN,ARX/AD			;LOST SMALLER OP, USE ITS SIGN
+	AR_AR+BR,SKP AD NE,		;IS RESULT SIGNIFICANT?
+		SC_FE,I FETCH
+=
+=0	AC1_AR,J/FINI			;NO, CLEAR RESULT AC
+	SKP EXP NE,BR/AR		;IS RIGHT SHIFT REQ'D?
+=0	SKP AR0,FETCH WAIT,J/UFA4	;NO, IS RESULT NEG?
+	AR_BR*.5,GEN FE-#,#/377,SKP SCAD NE,FETCH WAIT
+=0	FE_-1,SET FLOV
+	FE_FE+1,SC/SCAD,SKP AR0
+=0
+UFA4:	AR0-8_SC,J/STAC1		;POS, PUT IN EXP STRAIGHT
+	AR0-8_-SC-1,J/STAC1		;NEG, USE COMPLEMENT OF EXP
+
+
+DFN1:	AR_-AR,SKP CRY0			; LOW FRACTION =0?
+=0	AR0-8_FE,STORE,			;STORE LOW WORD BACK TO MEM
+		ARX_AC0 COMP,J/STMAC	; GET COMPLEMENTED HIGH WORD
+	AR0-8_FE,STORE,			;LOW WORD WAS ZERO, INSTALL EXP
+		ARX_-AC0,J/STMAC	; GET NEGATED HIGH WORD
+.ENDIF/UFA.DFN
+
+	.DCODE
 132:	I,	FL-AC,	J/FSC
 	R,		J/IBP		;ADJBP IF AC .NE. 0
 	.UCODE
